--- a/style.css
+++ b/style.css
@@ -13,17 +13,18 @@ body {
 
   /*navigation menu */ 
   nav { 
-       background: rgb(239, 80, 41); 
+       background: rgba(198, 5, 105, 0.826); 
         margin: 0 auto; 
         display: flex;
         padding: 10px; 
+        margin-bottom: 20xp;
 
   } 
 
   h1 { 
        display: flex;
     align-items: center;
-    color: white;
+    color: rgb(0, 0, 0);
     flex: 1;
     margin: 0;
 } 
@@ -42,7 +43,7 @@ body {
 
 a {
     text-decoration: none;
-    color: #fff; 
+    color: #360909; 
 
 }
 
@@ -76,4 +77,4 @@ main {
 
 h2, h3 {
     margin: 0px;
-}
+}  
